--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,6 @@ section{
     font-size: 4rem;
 }
 
-span {
-    color: var(--main-color);
-    text-transform: uppercase;
-}
-
 .btn{
     margin-top: 1rem;
     display: inline-block;
@@ -167,6 +162,11 @@ span {
     color: #fff;
 }
 
+.about .row .content span {
+    color: var(--main-color);
+    text-transform: uppercase;
+}
+
 .about .row .content p{
     font-size: 1.5rem;
     color: #eee;
@@ -174,6 +174,12 @@ span {
     line-height: 2;
     text-align: justify;
 }
+
+.gallery span {
+    color: var(--main-color);
+    text-transform: uppercase;
+}
+
 
 .gallery .box-container{
     display: grid;
@@ -239,6 +245,11 @@ span {
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(27rem, 1fr));
     gap: 1.5rem;
+}
+
+.price span {
+    color: var(--main-color);
+    text-transform: uppercase;
 }
 
 .price .box-container .box{
