--- a/css/style.css
+++ b/css/style.css
@@ -1,475 +1,482 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;600;700&display=swap");
 
-:root {
-    --main-color:#57e03b;
-}
-
-*{
-    font-family: 'Nunito', sans-serif;
-    margin: 0; padding: 0;
-    box-sizing: border-box;
-    outline: none; border: none;
-    text-decoration: none;
-    transition: .2s linear;
+:root{
+  --main-color: #57e03b;
 }
 
-html{
-    font-size: 62.5%;
-    overflow-x: hidden;
-    scroll-padding-top: 7rem;
-    scroll-behavior: smooth;
+* {
+  font-family: "Nunito", sans-serif;
+  margin: 0; padding: 0;
+  box-sizing: border-box;
+  outline: none; border: none;
+  text-decoration: none;
+  transition: 0.2s linear;
 }
 
-html::-webkit-scrollbar{
-    width: 1rem;
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-padding-top: 7rem;
+  scroll-behavior: smooth;
 }
 
-html::-webkit-scrollbar-track{
-    background: #444;
+html::-webkit-scrollbar {
+  width: 1rem;
 }
 
-html::-webkit-scrollbar-thumb{
-    background: var(--main-color);
-    border-radius: 5rem;
+html::-webkit-scrollbar-track {
+  background: #444;
 }
 
-body{
-    background: #222;
+html::-webkit-scrollbar-thumb {
+  background: var(--main-color);
+  border-radius: 5rem;
 }
 
-section{
-    padding: 2rem 9%;
+body {
+  background: #222;
 }
 
-.heading{
-    text-align: center;
-    padding-bottom: 2rem;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 4rem;
-}
-#mail{
-    opacity: 0;
-}
-.btn{
-    margin-top: 1rem;
-    display: inline-block;
-    padding: .8rem 3rem;
-    font-size: 1.7rem;
-    border-radius: .5rem;
-    background: #666;
-    color: #fff;
-    cursor: pointer;
-    font-weight: 600;
-}
-.btn:hover{
-    background: var(--main-color);
+section {
+  padding: 2rem 9%;
 }
 
-.header{
-    position: fixed;
-    top: 0; left: 0; right: 0;
-    z-index: 10000;
-    background: #333;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1.5rem 9%;
+.heading {
+  text-align: center;
+  padding-bottom: 2rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 4rem;
 }
 
-.header  .logo{
-    font-weight: bolder;
-    color: #fff;
-    font-size: 2.5rem;
+#mail {
+  opacity: 0;
 }
 
-.header .logo span{
-    color: rgb(240, 240, 35);
+.btn {
+  margin-top: 1rem;
+  display: inline-block;
+  padding:.8rem 3rem;
+  font-size: 1.7rem;
+  border-radius: 0.5rem;
+  background: #666;
+  color: #fff;
+  cursor: pointer;
+  font-weight: 600;
+}
+.btn:hover {
+  background: var(--main-color);
 }
 
-.header .navbar a{
-    font-size: 1.7rem;
-    color: #fff;
-    margin-left: 2rem;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10000;
+  background: #333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 9%;
 }
 
-.header .navbar a:hover{
-    color: var(--main-color);
+.header .logo {
+  font-weight: bolder;
+  color: #fff;
+  font-size: 2.5rem;
 }
 
-#menu-bars{
-    font-size: 3rem;
-    color: #fff;
-    cursor: pointer;
-    display: none;
+.header .logo span {
+  color: rgb(240, 240, 35);
 }
 
-.home .content{
-    text-align: center;
-    padding-top: 6rem;
-    margin: 2rem auto;
-    max-width: 70rem;
+.header .navbar a {
+  font-size: 1.7rem;
+  color: #fff;
+  margin-left: 2rem;
 }
 
-.home .content h3{
-    color: #fff;
-    font-size: 4.5rem;
-    text-transform: uppercase;
-
+.header .navbar a:hover {
+  color: var(--main-color);
 }
 
-.home .content h3 span{
-    color: var(--main-color);
-    font-size: 4.5rem;
-    text-transform: uppercase;
+#menu-bars {
+  font-size: 3rem;
+  color: #fff;
+  cursor: pointer;
+  display: none;
 }
 
-.home .home-slider .swiper-slide{
-    overflow: hidden;
-    border-radius: .5rem;
-    height: 40rem;
-    width: 25rem;
+.home .content {
+  text-align: center;
+  padding-top: 6rem;
+  margin: 2rem auto;
+  max-width: 70rem;
 }
 
-.home .home-slider .swiper-slide img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+.home .content h3 {
+  color: #fff;
+  font-size: 4.5rem;
+  text-transform: uppercase;
 }
 
-.about .row{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1.5rem;
+.home .content h3 span {
+  color: var(--main-color);
+  font-size: 4.5rem;
+  text-transform: uppercase;
+}
+
+.home .home-slider .swiper-slide {
+  overflow: hidden;
+  border-radius: 0.5rem;
+  height: 40rem;
+  width: 25rem;
+}
+
+.home .home-slider .swiper-slide img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.about .row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
 .about .row .image {
-    flex: 1 1 45rem;
-    padding: 1rem;
+  flex: 1 1 45rem;
+  padding: 1rem;
 }
 
-.about .row .image img{
-    width: 100%;
-    border-radius: .5rem;
-    border: 1rem solid #333;
+.about .row .image img {
+  width: 100%;
+  border-radius: 0.5rem;
+  border: 1rem solid #333;
 }
 
-.about .row .content{
-    flex: 1 1 45rem;
+.about .row .content {
+  flex: 1 1 45rem;
 }
 
-.about .row .content h3{
-    font-size: 3.5rem;
-    color: #fff;
+.about .row .content h3 {
+  font-size: 3.5rem;
+  color: #fff;
 }
 
 .about .row .content span {
-    color: var(--main-color);
-    text-transform: uppercase;
+  color: var(--main-color);
+  text-transform: uppercase;
 }
 
-.about .row .content p{
-    font-size: 1.5rem;
-    color: #eee;
-    padding: 1rem 0;
-    line-height: 2;
-    text-align: justify;
+.about .row .content p {
+  font-size: 1.5rem;
+  color: #eee;
+  padding: 1rem 0;
+  line-height: 2;
+  text-align: justify;
 }
 
 .gallery span {
-    color: var(--main-color);
-    text-transform: uppercase;
+  color: var(--main-color);
+  text-transform: uppercase;
 }
 
-
-.gallery .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(27rem, 1fr));
-    gap: 1.5rem;
+.gallery .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+  gap: 1.5rem;
 }
 
-.gallery .box-container .box{
-    position: relative;
-    border: 1rem solid #333;
-    border-radius: .5rem;
-    height: 25rem;
-    cursor: pointer;
-    overflow: hidden;
+.gallery .box-container .box {
+  position: relative;
+  border: 1rem solid #333;
+  border-radius: 0.5rem;
+  height: 25rem;
+  cursor: pointer;
+  overflow: hidden;
 }
 
-.gallery .box-container .box img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+.gallery .box-container .box img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
-.gallery .box-container .box:hover img{
-   transform: scale(1.1);
+.gallery .box-container .box:hover img {
+  transform: scale(1.1);
 }
 
-.gallery .box-container .box .title{
-    position:absolute;
-    top: -10rem;left: 0;right: 0;
-    background: #333;
-    color:#fff;
-    text-align: center;
-    padding-bottom: 1rem;
-    font-size: 2rem;
+.gallery .box-container .box .title {
+  position: absolute;
+  top: -10rem;
+  left: 0;
+  right: 0;
+  background: #333;
+  color: #fff;
+  text-align: center;
+  padding-bottom: 1rem;
+  font-size: 2rem;
 }
-.gallery .box-container .box:hover .title{
-    top: 0;
-}
-
-.gallery .box-container .box .icons{
-    position:absolute;
-    bottom: -10rem;left: 0;right: 0;
-    background: #333;
-    padding-top: 1rem;
-    text-align: center;
+.gallery .box-container .box:hover .title {
+  top: 0;
 }
 
-.gallery .box-container .box:hover .icons{
-    bottom: 0;
+.gallery .box-container .box .icons {
+  position: absolute;
+  bottom: -10rem;
+  left: 0;
+  right: 0;
+  background: #333;
+  padding-top: 1rem;
+  text-align: center;
 }
 
-.gallery .box-container .box .icons a{
-    font-size: 2rem;
-    margin: .5rem 1rem;
-    color: #fff;
+.gallery .box-container .box:hover .icons {
+  bottom: 0;
 }
 
-.gallery .box-container .box .icons a:hover{
-    color: var(--main-color);
+.gallery .box-container .box .icons a {
+  font-size: 2rem;
+  margin: 0.5rem 1rem;
+  color: #fff;
 }
 
-.price .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(27rem, 1fr));
-    gap: 1.5rem;
+.gallery .box-container .box .icons a:hover {
+  color: var(--main-color);
+}
+
+.price .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+  gap: 1.5rem;
 }
 
 .price span {
-    color: var(--main-color);
-    text-transform: uppercase;
+  color: var(--main-color);
+  text-transform: uppercase;
 }
 
-.price .box-container .box{
-    padding: 2rem 0;
-    background: #333;
-    border-radius: .5rem;
-    text-align: center;
+.price .box-container .box {
+  padding: 2rem 0;
+  background: #333;
+  border-radius: 0.5rem;
+  text-align: center;
 }
 
-.price .box-container .box:hover{
-    transform: scale(1.03);
+.price .box-container .box:hover {
+  transform: scale(1.03);
 }
 
-.price .box-container .box .title{
-    background: var(--main-color);
-    color: #fff;
-    padding: 1.5rem 0;
-    font-size: 2rem;
+.price .box-container .box .title {
+  background: var(--main-color);
+  color: #fff;
+  padding: 1.5rem 0;
+  font-size: 2rem;
 }
 
-.price .box-container .box .amount{
-    color: #fff;
-    padding-top: 2rem;
-    font-size: 4rem;
+.price .box-container .box .amount {
+  color: #fff;
+  padding-top: 2rem;
+  font-size: 4rem;
 }
 
-.price .box-container .box ul{
-    list-style: none;
-    padding: 1rem 0;
+.price .box-container .box ul {
+  list-style: none;
+  padding: 1rem 0;
 }
 
-.price .box-container .box ul li{
-    font-size: 1.5rem;
-    color: #eee;
-    padding: 1rem 0;
+.price .box-container .box ul li {
+  font-size: 1.5rem;
+  color: #eee;
+  padding: 1rem 0;
 }
 
-.price .box-container .box ul li i{
-    color: var(--main-color);
-    padding-right: 1rem;
+.price .box-container .box ul li i {
+  color: var(--main-color);
+  padding-right: 1rem;
 }
 
-
-.contact form{
-    max-width: 70rem;
-    margin: 1rem auto;
-    text-align: center;
+.contact form {
+  max-width: 70rem;
+  margin: 1rem auto;
+  text-align: center;
 }
 
-.contact form .inputBox{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.contact form .inputBox {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.contact form .inputBox input, 
+.contact form .inputBox input,
 .contact form textarea {
-    width: 100%;
-    background: #333;
-    border-radius: .5rem;
-    padding: 1rem;
-    margin: .7rem 0;
-    font-size: 1.5rem;
-    color: #fff;
-    text-transform: none;
-
+  width: 100%;
+  background: #333;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin: 0.7rem 0;
+  font-size: 1.5rem;
+  color: #fff;
+  text-transform: none;
 }
 
-.contact form .inputBox input::placeholder, 
-.contact form textarea::placeholder{
-    color: #eee;
-    text-transform: capitalize;
+.contact form .inputBox input::placeholder,
+.contact form textarea::placeholder {
+  color: #eee;
+  text-transform: capitalize;
 }
 
-.contact form .inputBox input:focus, 
-.contact form textarea:focus{
-    background: #444;
+.contact form .inputBox input:focus,
+.contact form textarea:focus {
+  background: #444;
 }
 
-.contact form .inputBox input{
-    width: 49%;
+.contact form .inputBox input {
+  width: 49%;
 }
 
-.contact form textarea{
-    resize: none;
+.contact form textarea {
+  resize: none;
 }
 
-.footer .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(27rem, 1fr));
-    gap: 1.5rem;
+.footer .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+  gap: 1.5rem;
 }
 
-.footer .box-container .box h3{
-    font-size: 2.5rem;
-    padding: 1rem 0;
-    color: #fff;
+.footer .box-container .box h3 {
+  font-size: 2.5rem;
+  padding: 1rem 0;
+  color: #fff;
 }
 
-.footer .box-container .box a{
-    display: block;
-    font-size: 1.5rem;
-    padding: 1rem 0;
-    color: #eee;
+.footer .box-container .box a {
+  display: block;
+  font-size: 1.5rem;
+  padding: 1rem 0;
+  color: #eee;
 }
 
-.footer .box-container .box a i{
-    padding-right: 1rem;
-    color: var(--main-color);
+.footer .box-container .box a i {
+  padding-right: 1rem;
+  color: var(--main-color);
 }
 
-.footer .box-container .box a:hover i{
-    padding-right: 1.5rem;
-    color: #fff;
+.footer .box-container .box a:hover i {
+  padding-right: 1.5rem;
+  color: #fff;
 }
 
-.theme-toggler{
-    position: fixed;
-    top: 10rem; right: -20rem;
-    background: #333;
-    z-index: 1000;
-    width: 20rem;
-    text-align: center;
+.theme-toggler {
+  position: fixed;
+  top: 10rem;
+  right: -20rem;
+  background: #333;
+  z-index: 1000;
+  width: 20rem;
+  text-align: center;
 }
 
-.theme-toggler.active{
-    right: 0;
+.theme-toggler.active {
+  right: 0;
 }
 
-.theme-toggler h3{
-    color: #fff;
-    padding: 1rem 0;
-    font-size: 2rem;
+.theme-toggler h3 {
+  color: #fff;
+  padding: 1rem 0;
+  font-size: 2rem;
 }
 
-.theme-toggler .buttons{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1rem;
-    padding: 1rem;
+.theme-toggler .buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem;
 }
 
-.theme-toggler .buttons .theme-btn{
-    height: 5rem;
-    width: 5rem;
-    border-radius: 50%;
-    cursor: pointer;
+.theme-toggler .buttons .theme-btn {
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.theme-toggler .toggle-btn{
-    position: absolute;
-    top: 0; left: -5.9rem;
-    padding: 1.3rem 1.5rem;
-    background: #333;
-    cursor: pointer;
+.theme-toggler .toggle-btn {
+  position: absolute;
+  top: 0;
+  left: -5.9rem;
+  padding: 1.3rem 1.5rem;
+  background: #333;
+  cursor: pointer;
 }
-
 
 .theme-toggler .toggle-btn i{
-    color: #fff;
-    font-size: 3rem;
+  color: #fff;
+  font-size: 3rem;
 }
 
-@media(max-width:991px){
-html{
+
+@media (max-width: 991px) {
+  html {
     font-size: 55%;
-}
-.header{
+  }
+  .header {
     padding: 1.5rem 2rem;
-}
-section{
+  }
+  section {
     padding: 2rem;
-}
+  }
 }
 
-@media(max-width:768px){
-    #menu-bars{
+@media (max-width: 768px) {
+  #menu-bars {
     display: initial;
+  }
+  .header .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    border-top: 0.1rem solid #222;
+    background: #333;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
+  .header .navbar.active {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+
+  .fa-times {
+    transform: rotate(180deg);
+  }
+  .header .navbar a {
+    display: flex;
+    background: #222;
+    border-radius: 0.5rem;
+    padding: 1.3rem;
+    margin: 1.3rem;
+    font-size: 2rem;
+  }
+
+  .home .content h3 {
+    font-size: 4rem;
+  }
 }
-    .header .navbar{
-        position: absolute;
-        top: 100%;left: 0;right: 0;
-        border-top: .1rem solid #222;
-        background: #333;
-        clip-path: polygon(0 0,100% 0,100% 0,0 0);
-    }
-    .header .navbar.active{
-        clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
-    }
 
-    
-    .fa-times{
-        transform: rotate(180deg);
-    }
-    .header .navbar a{
-        display: flex;
-        background: #222;
-        border-radius: .5rem;
-        padding: 1.3rem;
-        margin: 1.3rem;
-        font-size: 2rem;
-    }
-
-    .home .content h3{
-        font-size: 4rem;
-    }
-}
-
-@media(max-width:450px){
-html{
+@media (max-width: 450px) {
+  html {
     font-size: 50%;
-}
-.home .home-slider .swiper-slide{
+  }
+  .home .home-slider .swiper-slide {
     width: 27rem;
-}
+  }
 
-.contact form .inputBox input{
+  .contact form .inputBox input {
     width: 100%;
-}
+  }
 }
